# pets-playground

./: .gitignore  LICENSE  README.md
fl/fedavg/: README.md  pyproject.toml
fl/fedavg/fedavg/: __main__.py
he/ckks/: README.md  go.mod
he/ckks/cmd/addition/: main.go
he/ckks/cmd/multiplication/: main.go
mpc/bgw/: README.md
mpc/bgw/bgw/: elderly.py
pir/spiral/: Cargo.toml  README.md
pir/spiral/src/: main.rs
pseudonymization/: README.md  pyproject.toml
psi/ecdh/: BUILD  README.md  WORKSPACE  main.go
smpc/bgw/: pyproject.toml
zkp/groth16/: Cargo.toml  README.md
zkp/groth16/src/: main.rs
